src/styles/components/_sidebar.scss
@use '../abstracts/animations';

.sidebar-wrapper {

    .side-content-wrapper {
        position: absolute;
        width: 100%;
        height: 100svh;
        top: 0;
        z-index: 10;
        display: flex;
        flex-direction: column;
        padding: 10px 20px;
        animation: fade-in 1s forwards;

        .icon {
            align-self: end;
        }

        &.hidden {
            display: none;
        }
    }

    .side-left {
        width: 51%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 9;
        animation: expand-width 1s forwards;

        &.close {
            animation: contract-width 1s forwards
        }
    }

    .side-right {
        width: 50%;
        height: 100%;
        position: absolute;
        top: 0;
        right: 0;
        z-index: 9;
        animation: expand-width 1s forwards;

        &.close {
            animation: contract-width 1s forwards
        }
    }
}

